# 18.6_capstone_two

./: Makefile  README.md  environment.yml  pyproject.toml
18.6_capstone_two/: __init__.py  dataset.py  features.py  plots.py
18.6_capstone_two/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 18.6_capstone_two.ipynb
