[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "18.6_capstone_two"
version = "0.0.1"
description = "Springboard Data Wrangling 18.6 Capstone Two"
authors = [
  { name = "Benoit Loze" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["18.6_capstone_two"]
include = ["pyproject.toml", "18.6_capstone_two/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["18.6_capstone_two"]
force-sort-within-sections = true

